--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "js-example-dropbox",
+  "name": "kb-melonic-brand",
   "version": "0.1.0",
-  "description": "Example KillingBilling project in JavaScript.",
+  "description": "Billing plan for Melonic clients",
   "main": "plans.json",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KillingBilling/js-example-dropbox.git"
+    "url": "https://github.com/sergeymishin/kb-melonic-brand.git"
   },
   "keywords": [
+    "Melonic",
     "KillingBilling",
     "billing",
     "accounting",
@@ -19,12 +20,12 @@
     "paas",
     "cloud"
   ],
-  "author": "Ivan Mikushin (https://twitter.com/imikushin)",
+  "author": "Sergey Mishin (https://twitter.com/sergeymishin)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/KillingBilling/js-example-dropbox/issues"
+    "url": "https://github.com/sergeymishin/kb-melonic-brand/issues"
   },
-  "homepage": "https://github.com/KillingBilling/js-example-dropbox",
+  "homepage": "https://github.com/sergeymishin/kb-melonic-brand",
   "dependencies": {
     "bignumber.js": "~1.3.0"
   }
